--- a/UIKit/ToDoList 12/ToDoList 12/Info.plist
+++ b/UIKit/ToDoList 12/ToDoList 12/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>UIAppFonts</key>
+    <array>
+        <string>Assistant-SemiBold.ttf</string>
+        <string>Assistant-Medium.ttf</string>
+        <string>Assistant-Bold.ttf</string>
+        <string>Assistant-Regular.ttf</string>
+    </array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
